syntax = "proto3";

// each class is defined in each own file, inside a common package
option java_multiple_files = true;
option java_package = "landmark_service";

package landmark_service;

service LandmarkDetectionService {
  // Checks if the service is alive
  rpc isAlive(Void) returns (Text);
  // Submits an image for monument detection
  rpc SubmitImage(stream ImageSubmissionChunk) returns (ImageSubmissionResponse);

}

message Void {

}

message Text {
  string msg=1;
}

message ImageSubmissionChunk {
  // Content of a part of the image file
  bytes chunk_data = 1;
}

message ImageSubmissionResponse {
  string request_id = 1;
}
